# coreutils

src/uu/wall/: Cargo.toml
src/uu/wall/locales/: en-US.ftl  fr-FR.ftl
src/uu/wall/src/: wall.rs
