[package]
name = "uu-wall"
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
uucore = { workspace = true, features = ["utmpx"] }
fluent = { workspace = true }
thiserror.workspace = true

[lints]
workspace = true

[lib]
path = "src/wall.rs"

[[bin]]
name = "wall"
path = "src/main.rs"
